--- a/DetectiingFlip/app/src/main/res/layout/activity_main.xml
+++ b/DetectiingFlip/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="356dp"
         android:layout_marginEnd="176dp"
         android:layout_marginBottom="356dp"
-        android:text="TextView"
+        android:text="Face UP"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
