--- a/Smartify/app/src/main/res/values/colors.xml
+++ b/Smartify/app/src/main/res/values/colors.xml
@@ -6,6 +6,6 @@
         <color name="colorWhite">#FFFFFF</color>
         <color name="whiteTransparent">#B3FFFFFF</color>
         <color name="colorTransparentWhite">#cccccc</color>
-    <color name="redTransparent">#80FF0000</color>
+    <color name="blueTransparent">#804E69FF</color>
     </resources>
 
