--- a/Smartify/app/src/main/res/layout/activity_maps.xml
+++ b/Smartify/app/src/main/res/layout/activity_maps.xml
@@ -26,13 +26,14 @@
         android:id="@+id/settings"
         android:layout_width="match_parent"
         android:layout_height="168dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginLeft="5dp"
+        android:alpha="0"
         android:background="@drawable/bg_blue"
         android:orientation="vertical"
         android:weightSum="2"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="parent">
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -51,23 +52,24 @@
                 tools:ignore="RtlHardcoded" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fabOpen"
+                android:id="@+id/fabDnd"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:layout_weight="1"
                 android:clickable="true"
-                app:maxImageSize="30dp"
-                android:src="@drawable/ic_delete_forever_black_24dp" />
+                android:src="@drawable/ic_do_not_disturb_on_black_24dp"
+                app:maxImageSize="30dp" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/fabDnd"
+                android:id="@+id/fabOpen"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:clickable="true"
                 android:foregroundGravity="left|bottom"
-                android:src="@drawable/ic_do_not_disturb_on_black_24dp"
+
+                android:src="@drawable/ic_delete_forever_black_24dp"
                 app:layout_columnWeight="1"
                 app:layout_gravity="center" />
 
