--- a/Smartify/app/src/main/res/layout/activity_maps.xml
+++ b/Smartify/app/src/main/res/layout/activity_maps.xml
@@ -59,7 +59,7 @@
                 android:layout_weight="1"
                 android:clickable="true"
                 android:src="@drawable/ic_do_not_disturb_on_black_24dp"
-                app:maxImageSize="30dp" />
+                 />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/fabOpen"
@@ -68,7 +68,7 @@
                 android:layout_margin="10dp"
                 android:clickable="true"
                 android:foregroundGravity="left|bottom"
-
+                app:maxImageSize="30dp"
                 android:src="@drawable/ic_delete_forever_black_24dp"
                 app:layout_columnWeight="1"
                 app:layout_gravity="center" />
