--- a/Smartify/app/src/main/res/layout/activity_on_boarding.xml
+++ b/Smartify/app/src/main/res/layout/activity_on_boarding.xml
@@ -9,12 +9,23 @@
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/slideView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/dots"
+        android:layout_width="414dp"
+        android:layout_height="630dp"
+        android:layout_marginBottom="53dp"
+        app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"></androidx.viewpager.widget.ViewPager>
+        app:layout_constraintTop_toTopOf="parent">
+
+        <Button
+            android:id="@+id/button4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Button" />
+
+
+    </androidx.viewpager.widget.ViewPager>
 
     <LinearLayout
         android:id="@+id/dots"
@@ -26,15 +37,12 @@
         android:layout_alignParentEnd="false"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="4dp"
         android:layout_marginEnd="50dp"
-        android:layout_marginBottom="12dp"
         android:orientation="horizontal"
         android:padding="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button2"
-        app:layout_constraintStart_toEndOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/slideView"></LinearLayout>
+        app:layout_constraintStart_toEndOf="@+id/button"></LinearLayout>
 
     <Button
         android:id="@+id/button"
@@ -47,13 +55,13 @@
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/dots"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/slideView" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="53dp"
         android:background="@android:color/transparent"
         android:text="Next"
         android:textColor="#FFFFFF"
@@ -61,6 +69,20 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/dots"
+        app:layout_constraintTop_toBottomOf="@+id/slideView" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="161dp"
+        android:layout_marginTop="13dp"
+        android:layout_marginEnd="162dp"
+        android:text="Give Permission"
+        app:layout_constraintBottom_toTopOf="@+id/dots"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.301"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/slideView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
