--- a/calendar/app/src/main/res/layout/activity_main.xml
+++ b/calendar/app/src/main/res/layout/activity_main.xml
@@ -11,11 +11,16 @@
         android:layout_width="412dp"
         android:layout_height="731dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.viewpager.widget.ViewPager
+            android:id="@+id/view_pager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/calendar" />
     </com.wefika.calendar.CollapseCalendarView>
 
 
