--- a/calendar/app/src/main/res/layout/list_item.xml
+++ b/calendar/app/src/main/res/layout/list_item.xml
@@ -1,55 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-
+    android:orientation="horizontal"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:paddingTop="5dip"
+    android:paddingBottom="5dip"
+    android:background="#CCC">
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:id="@+id/linearLayout1"
         android:layout_height="fill_parent"
-        android:background="#CCC"
+        android:layout_width="wrap_content"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/hourTV"
+            android:text=""
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"/>
+        <TextView
+            android:id="@+id/amTV"
+            android:text=""
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"/>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/LLdesign"
         android:orientation="horizontal"
-        android:paddingTop="5dip"
-        android:paddingBottom="5dip">
-
+        android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        android:padding="3dip">
         <LinearLayout
-            android:id="@+id/linearLayout1"
-            android:layout_width="wrap_content"
+            android:id="@+id/eventsLL"
+            android:orientation="vertical"
             android:layout_height="fill_parent"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/hourTV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:textAppearance="?android:attr/textAppearanceSmall" />
-
-            <TextView
-                android:id="@+id/amTV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:textAppearance="?android:attr/textAppearanceSmall" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/LLdesign"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:orientation="horizontal"
-            android:padding="3dip">
+            android:background="@drawable/eventbg">
 
-            <LinearLayout
-                android:id="@+id/eventsLL"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:background="@drawable/eventbg"
-                android:orientation="vertical"></LinearLayout>
         </LinearLayout>
-
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
