--- a/Smartify/app/src/main/res/layout/layout.xml
+++ b/Smartify/app/src/main/res/layout/layout.xml
@@ -1,47 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/item"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="28dp"
-            android:layout_height="17dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/green_tick" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <ImageView
-        android:id="@+id/app_icon"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:paddingBottom="8dp"/>
-
-    <TextView
-        android:id="@+id/list_app_name"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="16dp"
-        android:textColor="#000000"
-        android:layout_toRightOf="@+id/app_icon"
-        android:layout_alignTop="@+id/app_icon"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="2dp"/>
+        android:orientation="horizontal">
+
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp">
+
+            <ImageView
+                android:id="@+id/packageImage"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginTop="6dp"
+                android:src="@mipmap/ic_launcher" />
+
+            <TextView
+                android:id="@+id/Apk_Name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="4dp"
+                android:layout_marginTop="6dp"
+                android:layout_toEndOf="@id/packageImage"
+                android:layout_toRightOf="@id/packageImage"
+                android:textColor="#000" />
+
+            <TextView
+                android:id="@+id/Apk_Package_Name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/Apk_Name"
+                android:layout_marginLeft="4dp"
+                android:layout_toEndOf="@id/packageImage"
+                android:layout_toRightOf="@id/packageImage"
+                android:textColor="#795548"
+
+                />
+
+            <CheckBox
+                android:id="@+id/appSelect"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true" />
+        </RelativeLayout>
+
+    </LinearLayout>
+
 
 </RelativeLayout>
