--- a/Smartify/app/src/main/res/layout/row1.xml
+++ b/Smartify/app/src/main/res/layout/row1.xml
@@ -2,12 +2,12 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/linearLayout2"
+    android:id="@+id/linearLayout3"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/app_icon"
+        android:id="@+id/app_icon1"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_margin="5dp"
@@ -18,35 +18,34 @@
 
 
     <TextView
-        android:id="@+id/app_name"
+        android:id="@+id/app_name1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="28dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="36dp"
         android:text="Youtube"
-        android:textSize="24sp"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/app_icon"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <TextView
-        android:id="@+id/app_paackage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="52dp"
-        android:visibility="invisible"
-        app:layout_constraintLeft_toRightOf="@id/app_icon"
+        app:layout_constraintLeft_toRightOf="@id/app_icon1"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/app_paackage1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:visibility="invisible"
+        app:layout_constraintLeft_toRightOf="@id/app_icon1"
+        app:layout_constraintTop_toBottomOf="@id/app_name1" />
+
+
     <CheckBox
-        android:id="@+id/cb_app"
-        android:layout_width="45dp"
-        android:layout_height="35dp"
+        android:id="@+id/cb_app1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="16dp"
@@ -54,6 +53,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.636" />
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
